feature: implemented project add and view all personal projects in frontend and backend